fix: assuring LSP listen (basic conf not secure)